--- a/docker-postgresql/docker-compose.yml
+++ b/docker-postgresql/docker-compose.yml
@@ -3,22 +3,20 @@ services:
   postgres:
     image: postgres:latest
     restart: always
+
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
     ports:
       - "5432:5432"
-    logging:
-      options:
-          max-size: 10m
-          max-file: "3"
-#    volumes:
-#      - ./db/:/var/lib/postgresql/data/
+
   pgadmin:
     image: dpage/pgadmin4
     environment:
       - PGADMIN_DEFAULT_EMAIL=postgres@sql.net
       - PGADMIN_DEFAULT_PASSWORD=postgres
     ports:
-      - "5050:80"
+      - "3657:80"
+
+#        run database with docker-compose up --build
