dockerfile for gateway-server added

--- a/docker-nginx/nginx/conf/default.conf
+++ b/docker-nginx/nginx/conf/default.conf
@@ -1,6 +1,5 @@
 server {
     listen       80;
-    listen  [::]:80;
 
     server_name  localhost;
 
@@ -12,9 +11,9 @@ server {
 
 server {
     listen       443 ssl;
-    listen  [::]:443 ssl;
 
     server_name localhost;
+    ssl on;
 
     ssl_certificate /etc/nginx/ssl/localhost+3.pem;
     ssl_certificate_key /etc/nginx/ssl/localhost+3-key.pem;
