--- a/docker-nginx/docker-compose.yml
+++ b/docker-nginx/docker-compose.yml
@@ -1,8 +1,9 @@
-version: '3.1'
+version: '3.8'
 services:
   webserver:
     image: nginx:latest
     restart: always
+    network_mode: "bridge"
     ports:
       - "80:80"
       - "443:443"
