--- a/docker-nginx/nginx/conf/default.conf
+++ b/docker-nginx/nginx/conf/default.conf
@@ -1,9 +1,7 @@
 server {
     listen       80;
-    listen  [::]:80;
 
     server_name  localhost;
-    server_tokens off;	    
 
     location / {
         return 301 https://localhost$request_uri;
@@ -13,16 +11,26 @@ server {
 
 server {
     listen       443 ssl;
-    listen  [::]:443 ssl;
 
     server_name localhost;
+    ssl on;
 
     ssl_certificate /etc/nginx/ssl/localhost+3.pem;
     ssl_certificate_key /etc/nginx/ssl/localhost+3-key.pem;
 
     location / {
-        # ...    
+	proxy_set_header        Host $http_host;
+      	proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      	proxy_set_header        X-Forwarded-Proto $scheme;
+	proxy_set_header        X-Real-IP $remote_addr;
+	
+	proxy_redirect          off;
+      	proxy_pass              http://localhost:6443/;   
     }
 
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
 }
 
