--- a/docker-nginx/docker-compose.yml
+++ b/docker-nginx/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   webserver:
     image: nginx:latest
     restart: always
-    network_mode: "bridge"
+   # network_mode: "host"
     ports:
       - "80:80"
       - "443:443"
