--- a/docker-nginx/nginx/conf/default.conf
+++ b/docker-nginx/nginx/conf/default.conf
@@ -19,13 +19,13 @@ server {
     ssl_certificate_key /etc/nginx/ssl/localhost+3-key.pem;
 
     location / {
-	proxy_set_header        Host $http_host;
+	    proxy_set_header        Host $http_host;
       	proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       	proxy_set_header        X-Forwarded-Proto $scheme;
-	proxy_set_header        X-Real-IP $remote_addr;
+	    proxy_set_header        X-Real-IP $remote_addr;
 	
-	proxy_redirect          off;
-      	proxy_pass              http://localhost:6443/;   
+	    proxy_redirect          off;
+      	proxy_pass              http://host.docker.internal:6443/;   
     }
 
     error_page   500 502 503 504  /50x.html;
