refactored error handlings and directories

--- a/auth-server/Dockerfile
+++ b/auth-server/Dockerfile
@@ -6,7 +6,7 @@ COPY ./go.mod ./go.sum ./
 
 RUN go mod download
 
-COPY ./auth-server/server/server.go ./
+COPY ./auth-server/server.go ./
 COPY ./proto/ ./proto/
 
 RUN go build -o ./auth-server
