fixed some errors for auth server

--- a/auth-server/Dockerfile
+++ b/auth-server/Dockerfile
@@ -7,6 +7,7 @@ COPY ./go.mod ./go.sum ./
 RUN go mod download
 
 COPY ./auth-server/server.go ./
+COPY ./tools/ ./tools/
 COPY ./proto/ ./proto/
 
 RUN go build -o ./auth-server
