--- a/docker-nginx/nginx/conf/default.conf
+++ b/docker-nginx/nginx/conf/default.conf
@@ -1,7 +1,10 @@
+worker_processes auto;
+
 server {
     listen       80;
 
     server_name  localhost;
+    server_tokens off;
 
     location / {
         return 301 https://localhost$request_uri;
@@ -11,13 +14,15 @@ server {
 
 server {
     listen       443 ssl;
-
+    
     server_name localhost;
-    ssl on;
+    server_tokens off;   
+    
 
+    ssl on;
     ssl_certificate /etc/nginx/ssl/localhost+3.pem;
     ssl_certificate_key /etc/nginx/ssl/localhost+3-key.pem;
-
+   
     location / {
 	    proxy_set_header        Host $http_host;
       	proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
