--- a/docker-nginx/nginx/conf/default.conf
+++ b/docker-nginx/nginx/conf/default.conf
@@ -1,5 +1,3 @@
-worker_processes auto;
-
 server {
     listen       80;
 
@@ -7,7 +5,7 @@ server {
     server_tokens off;
 
     location / {
-        return 301 https://localhost$request_uri;
+        return 301 https://host.docker.internal$request_uri;
     }
 
 }
@@ -18,18 +16,16 @@ server {
     server_name localhost;
     server_tokens off;   
     
-
-    ssl on;
     ssl_certificate /etc/nginx/ssl/localhost+3.pem;
     ssl_certificate_key /etc/nginx/ssl/localhost+3-key.pem;
    
     location / {
-	    proxy_set_header        Host $http_host;
+        proxy_set_header        Host $http_host;
       	proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       	proxy_set_header        X-Forwarded-Proto $scheme;
-	    proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Real-IP $remote_addr;
 	
-	    proxy_redirect          off;
+        proxy_redirect          off;
       	proxy_pass              http://host.docker.internal:6443/;   
     }
 
