--- a/docker-serversdb/docker-compose.yml
+++ b/docker-serversdb/docker-compose.yml
@@ -8,7 +8,6 @@ services:
     command: redis-server --save 20 1 --loglevel warning
     volumes:
       - ./redis/cache/:/data/
-    network_mode: "host"
 
   postgres:
     image: postgres:latest
@@ -19,15 +18,14 @@ services:
       - POSTGRES_DB=postgres
     ports:
       - "5432:5432"
-    network_mode: "host"
 
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=postgres@sql.net
-      - PGADMIN_DEFAULT_PASSWORD=postgres
-    ports:
-      - "3657:80"
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   environment:
+  #     - PGADMIN_DEFAULT_EMAIL=postgres@sql.net
+  #     - PGADMIN_DEFAULT_PASSWORD=postgres
+  #   ports:
+  #     - "3657:80"
   
   auth:
     image: auth-server
@@ -36,7 +34,6 @@ services:
       - "5052:5052"
     depends_on:
       - cache
-    network_mode: "host"
 
   biz:
     image: biz-server
@@ -45,11 +42,14 @@ services:
       - "5062:5062"
     depends_on:
       - postgres
-    network_mode: "host"
 
   gateway:
     image: gateway-server
     restart: always
     ports:
       - "6443:6443"
-    network_mode: "host"
+
+networks: 
+  default: 
+    name: serversdb
+    external: true
