fixed the issue with redirecting http to https

--- a/docker-nginx/nginx/conf/default.conf
+++ b/docker-nginx/nginx/conf/default.conf
@@ -5,7 +5,7 @@ server {
     server_tokens off;
 
     location / {
-        return 301 https://host.docker.internal$request_uri;
+        return 301 https://localhost$request_uri;
     }
 
 }
