--- a/docker-nginx/nginx/conf/default.conf
+++ b/docker-nginx/nginx/conf/default.conf
@@ -2,6 +2,7 @@ server {
     listen       80;
 
     server_name  localhost;
+    server_tokens off;
 
     location / {
         return 301 https://localhost$request_uri;
@@ -11,20 +12,20 @@ server {
 
 server {
     listen       443 ssl;
-
+    
     server_name localhost;
-    ssl on;
-
+    server_tokens off;   
+    
     ssl_certificate /etc/nginx/ssl/localhost+3.pem;
     ssl_certificate_key /etc/nginx/ssl/localhost+3-key.pem;
-
+   
     location / {
-	    proxy_set_header        Host $http_host;
+        proxy_set_header        Host $http_host;
       	proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       	proxy_set_header        X-Forwarded-Proto $scheme;
-	    proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Real-IP $remote_addr;
 	
-	    proxy_redirect          off;
+        proxy_redirect          off;
       	proxy_pass              http://host.docker.internal:6443/;   
     }
 
